# Calculator-C-QML

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: calculated.cpp.7856FA749433788A.idx  calculated.h.850421FAD93C3434.idx  main.cpp.44DF463CACADACF3.idx
src/c++/: calculated.cpp  calculated.h
src/cpp/: calculated.h  main.cpp
src/qml/: AreaTextItem.qml  CalcButton.qml  main.qml  qml.qrc
